Initial commit: Walrus API with scraper, caching, and scheduling features

--- a/.env.example
+++ b/.env.example
@@ -4,18 +4,18 @@ NODE_ENV=development
 
 # Frontend URLs (update these with your actual frontend URLs)
 FRONTEND_URL_DEV=http://localhost:5173
-#FRONTEND_URL_PROD=https://yourapp.netlify.app
+FRONTEND_URL_PROD=https://your-frontend-domain.com
 
-# Scraping Configuration - Optimized for Render.com
+# Scraping Configuration - Optimized for deployment
 SCRAPE_TIMEOUT=30000
 CACHE_TTL=86400
 MAX_CACHE_SIZE=50
 MAX_MEMORY_USAGE=104857600
 
-# Render.com Production Settings (uncomment for production)
+# Production Settings (uncomment for production)
 # NODE_ENV=production
 # PORT=10000
-# FRONTEND_URL_PROD=https://yourfrontend.onrender.com
+# FRONTEND_URL_PROD=https://your-frontend.onrender.com
 
 # Logging Configuration
 LOG_LEVEL=info
