--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,28 @@
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+
 # Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment variables
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-logs
-*.log
-
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
+# Logs
+logs/
+*.log
+
 # Coverage directory used by tools like istanbul
 coverage/
+*.lcov
 
 # nyc test coverage
 .nyc_output
@@ -32,8 +33,8 @@ jspm_packages/
 # Optional npm cache directory
 .npm
 
-# Optional REPL history
-.node_repl_history
+# Optional eslint cache
+.eslintcache
 
 # Output of 'npm pack'
 *.tgz
@@ -41,9 +42,37 @@ jspm_packages/
 # Yarn Integrity file
 .yarn-integrity
 
-# Debug files
+# dotenv environment variables file
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Debug screenshots
+debug.png
 debug*.png
-debug*.jpg
 
 # OS generated files
 .DS_Store
