--- a/package.json
+++ b/package.json
@@ -6,12 +6,24 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js",
+    "test:quick": "node test.js quick",
+    "test:full": "node test.js full",
+    "test:production": "node test.js production",
+    "test:security": "node test.js security",
+    "test:scraper": "node test.js scraper",
+    "lint": "echo 'No linting configured'",
+    "build": "echo 'No build step required'",
+    "postinstall": "node -e \"try{require('puppeteer').executablePath()}catch(e){console.log('Puppeteer setup complete')}\""
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.0",
     "node-cron": "^3.0.3",
     "puppeteer": "^24.16.1",
     "sqlite3": "^5.1.6"
@@ -25,6 +37,6 @@
     "api",
     "scraping"
   ],
-  "author": "Your Name",
+  "author": "[Your Name]",
   "license": "MIT"
 }
